# newton

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/data/: inputs.rs  mod.rs  object.rs  state.rs
common/src/messages/: encoding.rs  from_client.rs  from_server.rs  mod.rs
flight/: Cargo.toml  build.rs  pixels_from_icon.py
flight/assets/ui/: coconut_jpg_note.txt
flight/src/: main.rs
flight/src/cli/: mod.rs
flight/src/data/: client_state.rs
flight/src/graphics/: app.rs  icon.rs  mod.rs  renderer.rs  textures.rs
flight/src/networking/: client.rs
networking/: Cargo.toml  build.rs
networking/proto/: newton.proto
networking/src/: lib.rs
networking/src/statekeeping/: inputs.rs  mod.rs  planet.rs  ship.rs  state.rs
server/: Cargo.toml
server/src/: main.rs
server/src/cli/: arg_parser.rs
server/src/networking/: server.rs
server/src/physics/: mod.rs  nbody.rs  physics_engine.rs  physics_runner.rs  state_loader.rs
systems/: default.ron
