[package]
name = "flight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.11", features = ["derive"] }
common = { path = "../common" }
ctrlc = "3.4.0"
env_logger = "0.10.0"
log = "0.4.19"
macroquad = "0.3.26"
message-io = "0.17.0"
serde = "1.0.166"
