[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
ndarray = "0.15.6"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures-core = "0.3.28"
num-traits = "0.2.15"
num-derive = "0.3.3"
tracing = "0.1.37"

[build-dependencies]
tonic-build = "0.9"
