[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "The server for Newton. It is responsible for running the simulation and sending the data to the clients."
authors = ["Olivier Audet-Yang"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
common = { path = "../common" }
message-io = "0.17.0"
ctrlc = "3.4.0"
log = "0.4.19"
serde = "1.0.164"
bincode = "1.3.3"
lazy_static = "1.4.0"
env_logger = "0.9.0"
clap = { version = "4.3.10", features = ["derive"] }
ron = "0.8.0"
